; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/vme/extr_vme.c_vme_calc_slot.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/vme/extr_vme.c_vme_calc_slot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.vme_bridge = type { %struct.device* }

@VME_SLOTS_MAX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Failed to identify slot\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vme_calc_slot(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.vme_bridge*, align 8
  %4 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %2, align 8
  %5 = load %struct.device*, %struct.device** %2, align 8
  %6 = call %struct.vme_bridge* @dev_to_bridge(%struct.device* %5)
  store %struct.vme_bridge* %6, %struct.vme_bridge** %3, align 8
  store i32 0, i32* %4, align 4
  br label %7

7:                                                ; preds = %21, %1
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @VME_SLOTS_MAX, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %24

11:                                               ; preds = %7
  %12 = load %struct.vme_bridge*, %struct.vme_bridge** %3, align 8
  %13 = getelementptr inbounds %struct.vme_bridge, %struct.vme_bridge* %12, i32 0, i32 0
  %14 = load %struct.device*, %struct.device** %13, align 8
  %15 = load i32, i32* %4, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.device, %struct.device* %14, i64 %16
  %18 = load %struct.device*, %struct.device** %2, align 8
  %19 = icmp eq %struct.device* %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %11
  br label %24

21:                                               ; preds = %11
  %22 = load i32, i32* %4, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %4, align 4
  br label %7

24:                                               ; preds = %20, %7
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* @VME_SLOTS_MAX, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %28, label %31

28:                                               ; preds = %24
  %29 = load %struct.device*, %struct.device** %2, align 8
  %30 = call i32 @dev_err(%struct.device* %29, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %34

31:                                               ; preds = %24
  %32 = load i32, i32* %4, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %4, align 4
  br label %34

34:                                               ; preds = %31, %28
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local %struct.vme_bridge* @dev_to_bridge(%struct.device*) #1

declare dso_local i32 @dev_err(%struct.device*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
